About list margins

--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ nav ul li a {
   margin: 30px 0 0 0;
 }
 .about main ul {
-  margin-bottom: 20px;
+  margin: 10px 0 20px 0;
   margin-inline-start: 20px;
 }
 .about main ul li {
