--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,9 @@ nav ul li a {
 }
 
 @media (max-width: 768px) {
+  h1 {
+    margin: 0 0 10px 0;
+  }
   .home .img {
     display: none;
   }
@@ -401,7 +404,7 @@ nav ul li a {
 
 @media (max-width: 448px) {
   h1 {
-    font-size: 2.5em;
+    font-size: 40px;
   }
   .img img {
     width: 100%;
