--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,9 @@ a:focus {
 .bg h2 {
   color: #fff;
 }
-.underlined {
+/* .underlined {
   border-bottom: 2px solid var(--secondary-color);
-}
+} */
 
  /****** Key frames for page animations ******/
  @keyframes fadeIn {
@@ -151,20 +151,24 @@ nav ul li {
 nav .link {
   text-transform: uppercase;
 }
-/* nav ul li:after {
-  background-color: var(--secondary-color);
-  content: "";
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  height: 3px;
-  visibility: hidden;
-  width: 100%;
-} */
 nav ul li a {
   color: var(--primary-color);
   font-weight: 600;
   font-size: .8em;
+}
+nav ul li:after {
+  background-color: var(--secondary-color);
+  content: "";
+  height: 2px;
+  visibility: hidden;
+  width: 100%;
+
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+}
+nav ul li.underlined:after {
+  visibility: visible;
 }
 
 /** Home **/
@@ -211,18 +215,32 @@ nav ul li a {
   position: relative;
 }
 .about main {
-  margin: 30px auto 70px auto;
+  margin: 40px auto 70px auto;
 }
-.about main .content {
-  width: 60%;
+.about main h1 {
+  margin: 0 0 40px 0;
 }
 .about main h2 {
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
-.about main section:nth-of-type(2) {
+.about main .content {
+  display: grid;
+  grid-column-gap: 80px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.about main .content .left {
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+.about main .content .right {
+  color: var(--secondary-color);
+  grid-column-start: 5;
+  grid-column-end: 7;
+}
+.about main .content .left div:nth-of-type(2) {
   margin: 10px 0 0 0;
 }
-.about main section:nth-of-type(3) {
+.about main .content .left div:nth-of-type(3) {
   font-size: 13px;
   font-style: italic;
   margin: 30px 0 0 0;
@@ -379,13 +397,12 @@ nav ul li a {
     margin-top: 80px;
   }
 
-  /* Portfolio */
-  .portfolio__tiles h1,
-  .portfolio__tiles-item {
-    margin-bottom: 15px;
+  /* About */
+  .about main .content {
+    display: block;
   }
-  .tile-content h2 {
-    margin-bottom: 10px;
+  .about main .content .right {
+    margin: 40px 0 0 0;
   }
 }
 
