--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-/****** Global variables ******/
+/*************************
+*** Global variables ***/
 :root {
   --primary-color: #2f2e2e;
   --secondary-color: #fd5a5a;
 }
 
-/****** Resets ******/
+/*************************
+*** Resets ***/
 body {
   color: var(--primary-color);
   font-family: Garamond, serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -20,18 +22,6 @@ h4,
 p {
   margin: 0;
 }
-h1 {
-  font-size: 52px;
-  line-height: 1.2;
-  font-weight: 400;
-}
-h2 {
-  font-size: 22px;
-}
-h2,
-p {
-  font-weight: 100;
-}
 ul {
   padding: 0;
   margin: 0;
@@ -39,33 +29,55 @@ ul {
 ul li {
   list-style-type: none;
 }
+
+/*************************
+*** Typography ***/
+h1 {
+  font-size: 52px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+h2 {
+  font-size: 26px;
+}
+h3 {
+  font-size: 20px;
+}
 a,
 a:focus {
-  color: inherit;
+  color: var(--secondary-color);
+  text-decoration: none;
 }
 a:focus {
   outline: 1px solid var(--secondary-color);
 }
 
-/****** Helper classes ******/
-.col {
+/*************************
+*** Bootstrap ***/
+.container {
   margin: 0 auto;
   width: 70%;
 }
-.bg {
-  background-color: var(--primary-color);
+.col {
+  display: grid;
 }
-.bg a,
-.bg p,
-.bg h2 {
-  color: #fff;
+.col-2 {
+  grid-template-columns: repeat(2, 1fr);
 }
-/* .underlined {
-  border-bottom: 2px solid var(--secondary-color);
-} */
+@media (max-width: 992px) {
+  .col {
+    grid-template-columns: repeat(1, 1fr)!important;
+  }
+}
 
- /****** Key frames for page animations ******/
- @keyframes fadeIn {
+/*** Utlity classes ***/
+.group {
+  margin: 20px 0;
+}
+
+/*************************
+*** Animations ***/
+@keyframes fadeIn {
   0% {
     opacity: 0;
   }
@@ -74,53 +86,50 @@ a:focus {
   }
 }
 
-/** Global styles for an animated element */
-.animation_element {
+.animate {
   animation-duration: .5s;
   animation-fill-mode: both;
   transition-timing-function: ease-in;
 }
 
-/** Fades in */
-.animation_element--fadein {
+.fade-in {
   animation-name: fadeIn;
 }
 
-/****** Layout styles ******/
+/*************************
+*** Layout styles ***/
 
-/** Styles to stick footer to bottom of homepage **/
-.container {
+/** Stick footer to bottom of homepage **/
+.wrapper {
   position: relative;
   min-height: 100vh;
 }
-.container footer {
-  position: absolute;
-  bottom: 30px;
+.wrapper footer {
+  font-size: 16px;
+  text-align: center;
+  margin: 4em 0 1em 0;
   width: 100%;
 }
-
-/** Set flex displays **/
-nav ul,
-footer ul,
-.home,
-.home .info ul {
-  display: flex;
-  align-items: center;
+@media (min-width: 992px) {
+  .wrapper footer {
+    bottom: 0;
+    position: absolute;
+  }
 }
+
 
 /*** Components ***/
 /** Nav **/
 nav {
   padding: 15px 0;
 }
-nav a {
-  text-decoration: none;
+nav ul {
+  display: flex;
+  align-items: center;
 }
 nav ul li {
   margin-right: 15px;
   position: relative;
-}
-nav .link {
   text-transform: uppercase;
 }
 nav ul li a {
@@ -134,7 +143,7 @@ nav ul li:after {
   height: 2px;
   visibility: hidden;
   width: 100%;
-
+  /* Position */
   position: absolute;
   bottom: -5px;
   left: 0;
@@ -143,165 +152,43 @@ nav ul li.underlined:after {
   visibility: visible;
 }
 
+/** Main **/
+main a {
+  font-weight: 600;
+}
+
 /** Home **/
-.home {
+#home {
   justify-content: space-between;
   margin-top: 7em;
 }
-.home ul li {
-  font-weight: 600;
-  margin-right: 10px;
+#home h2 {
+  font-size: 22px;
+  font-weight: 100;
 }
-.home .info h2 {
-  margin-bottom: 20px;
+#home .img {
+  text-align: right;
 }
-.home .info .email {
-  display: inline-block;
-  margin: 15px 0;
-  font-size: 18px;
-  font-style: italic;
-}
-.home .img img {
+#home .img img {
   border-radius: 50%;
-}
-.home .img p {
-  font-size: 14px;
-  font-style: italic;
-  margin-top: 5px;
-  text-align: center;
-}
-
-/** About **/
-.about .ital {
-  font-style: italic;
-}
-.about .underline-3 {
-  border-bottom: 3px solid var(--secondary-color);
-}
-.about header {
-  position: relative;
-  padding: 40px 0 10px 0;
-  overflow: hidden;
-}
-.about header .title {
-  position: relative;
-}
-.about main {
-  margin: 40px auto;
-}
-.about main h1 {
-  margin: 0 0 30px 0;
-}
-.about main h2 {
-  margin: 0 0 15px 0;
-}
-.about main .content {
-  display: grid;
-  grid-column-gap: 80px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-.about main .content .left {
-  grid-column-start: 1;
-  grid-column-end: 5;
-}
-.about main .content .left .section {
-  margin: 0 0 30px 0;
-}
-.about main ul {
-  margin: 10px 0 20px 0;
-  margin-inline-start: 20px;
-}
-.about main ul li {
-  list-style-type: initial;
-}
-.about main ul li,
-.about main p {
-  font-weight: 100;
-}
-
-/** Footer **/
-.container footer,
-.about footer {
-  color: var(--primary-color);
-  font-weight: 100;
-  font-size: 13px;
-  text-align: center;
-}
-.about footer {
-  background-color: #fd5a5a;
-  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M82.42 180h-1.415L0 98.995v-2.827L6.167 90 0 83.833V81.004L81.005 0h2.827L90 6.167 96.167 0H98.996L180 81.005v2.827L173.833 90 180 96.167V98.996L98.995 180h-2.827L90 173.833 83.833 180H82.42zm0-1.414L1.413 97.58 8.994 90l-7.58-7.58L82.42 1.413 90 8.994l7.58-7.58 81.006 81.005-7.58 7.58 7.58 7.58-81.005 81.006-7.58-7.58-7.58 7.58zM175.196 0h-25.832c1.033 2.924 2.616 5.59 4.625 7.868C152.145 9.682 151 12.208 151 15c0 5.523 4.477 10 10 10 1.657 0 3 1.343 3 3v4h16V0h-4.803c.51.883.803 1.907.803 3 0 3.314-2.686 6-6 6s-6-2.686-6-6c0-1.093.292-2.117.803-3h10.394-13.685C161.18.938 161 1.948 161 3v4c-4.418 0-8 3.582-8 8s3.582 8 8 8c2.76 0 5 2.24 5 5v2h4v-4h2v4h4v-4h2v4h2V0h-4.803zm-15.783 0c-.27.954-.414 1.96-.414 3v2.2c-1.25.254-2.414.74-3.447 1.412-1.716-1.93-3.098-4.164-4.054-6.612h7.914zM180 17h-3l2.143-10H180v10zm-30.635 163c-.884-2.502-1.365-5.195-1.365-8 0-13.255 10.748-24 23.99-24H180v32h-30.635zm12.147 0c.5-1.416 1.345-2.67 2.434-3.66l-1.345-1.48c-1.498 1.364-2.62 3.136-3.186 5.14H151.5c-.97-2.48-1.5-5.177-1.5-8 0-12.15 9.84-22 22-22h8v30h-18.488zm13.685 0c-1.037-1.793-2.976-3-5.197-3-2.22 0-4.16 1.207-5.197 3h10.394zM0 148h8.01C21.26 148 32 158.742 32 172c0 2.805-.48 5.498-1.366 8H0v-32zm0 2h8c12.15 0 22 9.847 22 22 0 2.822-.53 5.52-1.5 8h-7.914c-.567-2.004-1.688-3.776-3.187-5.14l-1.346 1.48c1.09.99 1.933 2.244 2.434 3.66H0v-30zm15.197 30c-1.037-1.793-2.976-3-5.197-3-2.22 0-4.16 1.207-5.197 3h10.394zM0 32h16v-4c0-1.657 1.343-3 3-3 5.523 0 10-4.477 10-10 0-2.794-1.145-5.32-2.992-7.134C28.018 5.586 29.6 2.924 30.634 0H0v32zm0-2h2v-4h2v4h4v-4h2v4h4v-2c0-2.76 2.24-5 5-5 4.418 0 8-3.582 8-8s-3.582-8-8-8V3c0-1.052-.18-2.062-.512-3H0v30zM28.5 0c-.954 2.448-2.335 4.683-4.05 6.613-1.035-.672-2.2-1.16-3.45-1.413V3c0-1.04-.144-2.046-.414-3H28.5zM0 17h3L.857 7H0v10zM15.197 0c.51.883.803 1.907.803 3 0 3.314-2.686 6-6 6S4 6.314 4 3c0-1.093.292-2.117.803-3h10.394zM109 115c-1.657 0-3 1.343-3 3v4H74v-4c0-1.657-1.343-3-3-3-5.523 0-10-4.477-10-10 0-2.793 1.145-5.318 2.99-7.132C60.262 93.638 58 88.084 58 82c0-13.255 10.748-24 23.99-24h16.02C111.26 58 122 68.742 122 82c0 6.082-2.263 11.636-5.992 15.866C117.855 99.68 119 102.206 119 105c0 5.523-4.477 10-10 10zm0-2c-2.76 0-5 2.24-5 5v2h-4v-4h-2v4h-4v-4h-2v4h-4v-4h-2v4h-4v-4h-2v4h-4v-2c0-2.76-2.24-5-5-5-4.418 0-8-3.582-8-8s3.582-8 8-8v-4c0-2.64 1.136-5.013 2.946-6.66L72.6 84.86C70.39 86.874 69 89.775 69 93v2.2c-1.25.254-2.414.74-3.447 1.412C62.098 92.727 60 87.61 60 82c0-12.15 9.84-22 22-22h16c12.15 0 22 9.847 22 22 0 5.61-2.097 10.728-5.55 14.613-1.035-.672-2.2-1.16-3.45-1.413V93c0-3.226-1.39-6.127-3.6-8.14l-1.346 1.48C107.864 87.987 109 90.36 109 93v4c4.418 0 8 3.582 8 8s-3.582 8-8 8zM90.857 97L93 107h-6l2.143-10h1.714zM80 99c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm20 0c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6z' fill='%23ff9191' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-  padding: 50px 0;
-}
-.about footer a {
-  text-decoration: none;
-}
-.about footer h2 {
-  font-size: 36px;
-  margin: 0 0 20px 0;
-}
-.about footer .email {
-  border: 2px solid #fff;
-  display: inline-block;
-  font-size: 16px;
-  margin: 0 0 20px 0;
-  padding: 10px 20px;
-  transition: all .1s ease-in;
-}
-.about footer .email:hover {
-  background-color: #fff;
-  color: var(--primary-color);
-}
-.about footer ul {
-  justify-content: center;
-  margin-bottom: 20px;
-}
-.about footer ul li {
-  font-weight: 500;
-  margin-right: 20px;
-  text-transform: uppercase;
-}
-.about footer ul li a {
-  color: #fff;
 }
 
 @media (max-width: 992px) {
   h2 {
     margin: 0 0 5px 0;
   }
-
-  .home,
-  .home .content {
-    flex-direction: column;
-  }
-
-  /* Home */
-  .home {
+  #home {
     align-items: initial;
     margin-bottom: 0;
     margin-top: 80px;
   }
-
-  /* About */
-  .about main .content {
-    display: block;
-  }
-  .about main .content .right {
-    margin: 40px 0 0 0;
-  }
 }
-
 @media (max-width: 768px) {
   h1 {
     margin: 0 0 10px 0;
   }
-  .home .img {
+  #home .img {
     display: none;
-  }
-  .about main .content {
-    width: 100%;
-  }
-  .tile-content {
-    padding: 25px;
   }
 }
 
@@ -310,6 +197,32 @@ nav ul li.underlined:after {
     font-size: 40px;
   }
   .img img {
+    width: 100%;
+  }
+}
+
+/** About **/
+#about {
+  margin-top: 3.5em;
+}
+#about .group {
+  width: 75%;
+}
+#about .group.freelance {
+  margin: 5px 0 0 0;
+}
+#about ul {
+  margin: 5px 0 0 0;
+  margin-inline-start: 20px;
+}
+#about ul li {
+  list-style-type: initial;
+}
+#about h3 {
+  font-weight: 100;
+}
+@media (max-width: 992px) {
+  #about .group {
     width: 100%;
   }
 }
