--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,13 @@ h1 {
   line-height: 1.2;
   font-weight: 400;
 }
+@media (max-width: 768px) {
+  h1 {
+    font-size: 40px;
+    line-height: 1;
+    margin: 0 0 10px 0!important;
+  }
+}
 h2 {
   font-size: 26px;
 }
@@ -121,25 +128,25 @@ a:focus {
 
 
 /*** Components ***/
-/** Nav **/
-nav {
+/** Header nav **/
+header nav {
   padding: 15px 0;
 }
-nav ul {
+header nav ul {
   display: flex;
   align-items: center;
 }
-nav ul li {
+header nav ul li {
   margin-right: 15px;
   position: relative;
   text-transform: uppercase;
 }
-nav ul li a {
+header nav ul li a {
   color: var(--primary-color);
   font-weight: 600;
   font-size: .8em;
 }
-nav ul li:after {
+header nav ul li:after {
   background-color: var(--secondary-color);
   content: "";
   height: 2px;
@@ -150,7 +157,7 @@ nav ul li:after {
   bottom: -5px;
   left: 0;
 }
-nav ul li.underlined:after {
+header nav ul li.underlined:after {
   visibility: visible;
 }
 
@@ -176,9 +183,6 @@ main a {
 }
 
 @media (max-width: 992px) {
-  h2 {
-    margin: 0 0 5px 0;
-  }
   #home {
     align-items: initial;
     margin-bottom: 0;
@@ -189,17 +193,11 @@ main a {
   }
 }
 @media (max-width: 768px) {
-  h1 {
+  #home h1 {
     margin: 0 0 10px 0;
   }
-}
-
-@media (max-width: 448px) {
-  h1 {
-    font-size: 40px;
-  }
-  .img img {
-    width: 100%;
+  #home h2 {
+    font-size: 20px;
   }
 }
 
