Copy and styles updates

--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,9 @@ a:focus {
 }
 
 /*************************
-*** Layout styles ***/
+*** Layout ***/
 
-/** Stick footer to bottom of homepage **/
+/** Stick footer to bottom of viewport **/
 .wrapper {
   position: relative;
   min-height: 100vh;
@@ -126,8 +126,6 @@ a:focus {
   }
 }
 
-
-/*** Components ***/
 /** Header nav **/
 header nav {
   padding: 15px 0;
@@ -168,7 +166,6 @@ main a {
 
 /** Home **/
 #home {
-  justify-content: space-between;
   margin-top: 7em;
 }
 #home h2 {
@@ -184,9 +181,7 @@ main a {
 
 @media (max-width: 992px) {
   #home {
-    align-items: initial;
-    margin-bottom: 0;
-    margin-top: 80px;
+    margin-top: 5em;
   }
   #home .img {
     display: none;
