--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="title" content="Valerie Seer / Web developer">
-  <meta name="description" content="Chicago-based web developer">
+  <meta name="title" content="Valerie Seer | Web UI Developer in Chicago">
+  <meta name="description" content="Web Development professional">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
-  <link rel="icon" href="favicon.ico" type="image" />
+  <link rel="icon" type="image" href="favicon.ico" />
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
   <script src="https://kit.fontawesome.com/f1d0bb7021.js" crossorigin="anonymous"></script>
@@ -44,8 +44,8 @@
           <div class="col-12">
             <div class="content d-flex align-items-center">
               <div class="info">
-                <h1>Valerie Seer</h1>
-                <h2>Web UI Developer</h2>
+                <h1>{{PersonalInfo.FistName}} {{PersonalInfo.LastName}}</h1>
+                <h2>{{PersonalInfo.JobTitle}}</h2>
               </div>
             </div>
           </div>    
@@ -62,7 +62,7 @@
             <p>Web UI developer with a proven ability to design and develop complex interactive web interfaces. Proficient in HTML, CSS, JavaScript/jQuery, and currently learning React.</p>
             <p>Expert knowledge in UX best practices, ADA compliance, performance optimization, and cross-browser development. </p>
             <p>Fun facts: Miami native, Northwestern University Alum</p>
-            <a href="seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
+            <a href="images/seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
             <div class="about-site">
               <p>This site is deployed on Github pages and was built with UX, performance, mobile, and accessability in mind. It was built behind the scenes with:</p>
               <ul>
@@ -110,7 +110,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Appointment scheduling wireframe</h5>
                   <p class="card-text">Wireframe design and development of an appointment scheduling widget for a healthcare client page. <br><br> UX research/design, Illustrator, Mustache.js, Bootstrap, jQuery.</p>
-                  <a href="inQuicker-wireframe.pdf" target="_blank" class="btn btn-primary-outline">View work</a>
+                  <a href="images/inQuicker-wireframe.pdf" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
             </div>
