Setup gulp handlebars task

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -53,7 +53,7 @@
           <div class="col-12">
             <div class="content d-flex align-items-center">
               <div class="info">
-                <h1>{{PersonalInfo.FistName}} {{PersonalInfo.LastName}}</h1>
+                <h1>{{PersonalInfo.FirstName}} {{PersonalInfo.LastName}}</h1>
                 <h2>{{PersonalInfo.JobTitle}}</h2>
               </div>
             </div>
