--- a/src/index.hbs
+++ b/src/index.hbs
@@ -67,9 +67,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h2>Web Development meets UX design</h2>
+            <h2>Web Development meets UI design</h2>
             <p class="location"><i class="fas fa-map-pin icon"></i>Chicago, IL</p>
-            <p>Welcome! I'm Valerie. I like to build websites with a focus on clean and intuitive UX design. If this page didn't already give it away, my personal philosophy is "Simple is usually better." To learn more about my professional background, my resume, <a class="animate-to" href="#work">selected works</a>, and <a class="animate-to" href="#contact">relevant links</a> can be found below. To contact me, I'm an <a href="mailto:seervalerie@gmail.com" class="email">email</a> away and try to be as responsive as I can. Have a great day!</p>
+            <p>Welcome! I'm Valerie. I like to build websites with a focus on clean and intuitive UI design. If this page didn't already give it away, my personal philosophy is "Simple is usually better." To learn more about my professional background, my resume, <a class="animate-to" href="#work">selected works</a>, and <a class="animate-to" href="#contact">relevant links</a> can be found below. To contact me, I'm an <a href="mailto:seervalerie@gmail.com" class="email">email</a> away and try to be as responsive as I can. Have a great day!</p>
             <a href="images/seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
           </div>
           <div class="col-md-5">
